mat-drawer-inner-container scroll issue on mobile
referencing bug/feature in github angular components
added overflow hidden to this element for mobile customization

--- a/apps/courses/src/styles.scss
+++ b/apps/courses/src/styles.scss
@@ -24,6 +24,10 @@ body {
   max-height: initial;
 }
 
+.mat-drawer-inner-container { 
+  overflow: hidden !important; 
+}
+
 .overview {           // probably for desktop only
   width: 95%;
   img {
